# chi-tech-task

./: .coveragerc  .env.template  Dockerfile  LICENSE  README.md  chitechtask.postman_collection  docker-compose.yml  main.py  pyproject.toml  seed_db.py
.github/workflows/: ci.yml
app/: __init__.py  helpers.py  swagger.yml
app/articles/: views.py
app/auth/: views.py
app/commands/: __init__.py  commands.py
app/users/: views.py
core/: __init__.py  config.py
core/models/: __init__.py  article.py  base.py  mixins.py  user.py
migrations/: env.py
migrations/versions/: 2024_11_26_1738-3b93136cb3eb_create_users_table.py  2024_11_27_2021-da9336f708d5_create_articles_table.py
scripts/: db_init.sh  entrypoint.sh
tests/: conftest.py  test_articles.py  test_auth.py  test_commands.py  test_users.py
